--- a/package.json
+++ b/package.json
@@ -27,5 +27,18 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ezekiel-web-dev-17/my-portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ezekiel-web-dev-17/my-portfolio/issues"
+  },
+  "homepage": "https://github.com/Ezekiel-web-dev-17/my-portfolio#readme"
 }
